--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
-<h3>Users</h3>
-<div class="container-fluid">
+
+<div class="container-fluid"><br>
+  <h5>List of Users</h5>
   <%@users.each do |user| %>
     <%if current_user.id!=user.id %>
       <%=render user %><br>
       <%=link_to 'View Conversations',user_conversations_path(user),class: 'btn btn-primary' %><br><br>
-      <%end %>
+      <% end %>
   <% end %>
 </div>
