--- a/app/views/messages/create.turbo_stream.erb
+++ b/app/views/messages/create.turbo_stream.erb
@@ -1,1 +1,2 @@
-<%= turbo_stream.append 'messages_list', partial: 'messages/message', locals: { message: @message } %>
+<% @message=Message.new %>
+<%= turbo_stream.replace("new_message_form", partial: 'messages/form', locals: { message: @message })%>
