--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,26 +1,21 @@
-<div class="container-fluid">
-  <h5>Messages</h5>
-  <%if @messages.size==0 %>
-    <%='you are the first one to start conversation' %>
-    <%else %>
+<div>
+  <br><h5><%= "Conversation with #{@user2.username}" %></h5><br>
 
-    <%= turbo_stream_from "messages_list" %>
-       <turbo_frame id="messages_list">
-        <%@messages.each do |message| %>
-          <%=turbo_frame_tag message do%>
-            <%=render message %>
-
-           <%end %>
-        <% end %>
-       </turbo_frame>
-
-    <%end %>
-  <%#= turbo_frame_tag "message-new" do%>
-<!--    <div ><br>-->
-      <%=render 'form' %>
+    <%= turbo_stream_from "messages" %>
+    <div id="messages">
+      <%@messages.each do |message| %>
+        <%=render message,locals={message: message} %>
+       <%end %>
     </div>
-  <%#end %>
+  <br>
+   <div>
+     <%=turbo_frame_tag "new_message_form" do%>
+       <%= render 'form' %>
+       <%end %>
+
+   </div>
+
 
 <br>
-  <%=link_to 'Back',user_conversations_path %>
+  <%=link_to 'Back',user_conversations_path ,class: "btn btn-primary"%>
 </div>
