--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@user2, @conversation,@message], class: "form") do |form| %>
+<%= form_with(model: [@other_user, @conversation,@message], class: "form") do |form| %>
   <% if @message.errors.any? %>
     <div class="error-message">
       <%= @message.errors.full_messages.to_sentence.capitalize %>
