--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,6 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-
-
   </head>
 
   <body>
@@ -20,11 +18,11 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <%if current_user.present? %>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-          <li class="nav-item">
+           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item" >
@@ -32,17 +30,24 @@
           </li>
           <li class="nav-item">
 <!--            <a class="nav-link" href="">Link</a>-->
-            <%=button_to 'sign out',  destroy_user_session_path,method: :delete ,class: "nav-link active" if current_user.present? %>
+            <%=button_to 'sign out',  destroy_user_session_path, data: { confirm: "Are you sure?" },method: :delete ,class: "nav-link active" if current_user.present? %>
           </li>
 
-
         </ul>
+        <%if !params[:user_id].present? %>
+          <%= form_with url: search_users_path, method: :get, class: "d-flex", role: "search" do |form| %>
+            <%= form.text_field :username, class: "form-control me-2", type: "search", placeholder: "Enter name or email", "aria-label": "Search" %>
+            <%= form.submit "Search", class: "btn btn-outline-success", type: "submit" %>
+          <% end %>
+        <%elsif !params[:conversation_id].present? %>
+          <%= form_with url: search_user_conversations_path, method: :get, class: "d-flex", role: "search" do |form| %>
+            <%= form.text_field :title, class: "form-control me-2", type: "search", placeholder: "Enter Conversation title", "aria-label": "Search" %>
+            <%= form.submit "Search", class: "btn btn-outline-success", type: "submit" %>
+          <% end %>
+        <%end %>
 
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
+        <%end %>
     </div>
   </nav>
   <div class="container-fluid">
