--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag dom_id(@message) do %>
+<%= turbo_frame_tag @message do %>
   <strong><%= "#{@message.user.username} :" %></strong>
   <%= render "form", message: @message %>
 
