--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,18 +4,20 @@
     <%= turbo_stream_from "messages" %>
     <div id="messages">
       <%@messages.each do |message| %>
-        <%=render message,locals={message: message,user1: current_user} %>
+        <%=render message,locals={message: message} %>
        <%end %>
     </div>
   <br>
-   <div>
-     <%=turbo_frame_tag "new_message_form" do%>
-       <%= render 'form' %>
-       <%end %>
+  <div>
 
-   </div>
+    <%= turbo_frame_tag "new_message_form" do %>
+      <%=render 'messages/form',locals={message: Message.new} %>
+    <%end %>
+
+  </div>
 
 
-<br>
+
+  <br>
   <%=link_to 'Back',user_conversations_path ,class: "btn btn-primary"%>
 </div>
