Chat app with updated conversation search bar

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,10 +1,9 @@
 <%= form_with(model: [@other_user, @conversation,@message],remote: true, class: "form",data:{ controller: 'reset-form', action: "turbo:submit-end->reset-form#reset"}) do |form| %>
+  <div class="container-fluid">
+    <%= form.text_field :body,placeholder:"type your message here.."%>
+    <%= form.submit "send", class: "btn btn-primary" %>
 
-
-  <%= form.text_field :body,placeholder:"type your message here.."%>
-  <%= form.submit "send", class: "btn btn-primary" %>
-
-    <br>
+  </div><br>
 <% end %>
 
 
