--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
           <% end %>
         <%elsif !params[:conversation_id].present? %>
           <%= form_with url: search_user_conversations_path, method: :get, class: "d-flex", role: "search" do |form| %>
-            <%= form.text_field :title, class: "form-control me-2", type: "search", placeholder: "Enter Conversation title", "aria-label": "Search" %>
+            <%= form.text_field :title, class: "form-control me-2", type: "search", placeholder: "Enter title or message", "aria-label": "Search" %>
             <%= form.submit "Search", class: "btn btn-outline-success", type: "submit" %>
           <% end %>
         <%end %>
